Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12951

ProjectExplorer: Regression: Missing 'Close Project "xyz"' in context menu of project node

XMLWordPrintable

      Steps to reproduce:

      • have at least two projects opened inside QC
      • right click onto one of the project nodes

      Expected result:

      • there's a menu item stating 'Close Project "xyz"' with 'xyz' the name of the project

      Current result:

      • this menu item is missing in latest master (it's still present in 3.2)

      Note: this menu item exists if there's only one project opened in QC

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes