Unload Project: Readd to context menu

The action was shared between the file menu and the context menu. Since
the file menu action now acts more smartly and shows a menu if there are
multiple projects open, we need to use two separate actions for that.

Task-number: QTCREATORBUG-12951
Change-Id: I02eb6564e102cb019f82576ee418ab6f09be7654
Reviewed-by: Christian Stenger <christian.stenger@digia.com>